--- a/obsidian vault/Runes&Rails/Фонос и его физические законы.md
+++ b/obsidian vault/Runes&Rails/Фонос и его физические законы.md
@@ -1,5 +1,4 @@
-> Другие предлагаемые мною названия - звучание, фонос
-> Со всеобщего позволения сейчас я буду использовать название *фонос*, потому что **я так хочу, мне так нравится**
+> Ранее особой материей в нашем лоре был звук, но я заменяю его на фонос
 
 > В ЭТОЙ ЗАМЕТКЕ Я УПОРОЛСЯ В ФИЗИКУ
 
@@ -27,12 +26,12 @@ $$
 # Фонос и вещество
 Вещество и фонос могут влиять друг на друга.
 Законы, по которым взаимодействуют фонос и вещество:
-1. Частица фоноса и частица вещества могут находиться в одной точке пространства, так как находятся в параллельных измерениях[^2].
+1. Частица фоноса и частица вещества могут находиться в одной точке пространства[^2].
 2. Фонос может менять относительные местоположения себя и вещества рядом, то есть притягивать, отталкивать или удерживать на расстоянии от себя вещество, и также наоборот, притягиваться, отталкиваться или удерживаться на расстоянии от вещества.  Конкретное взаимодействие определяется гаммой фоноса и свойствами вещества.
 3. Вещество влияет на гамму окружающего фоноса с помощью собственных свойств температуры, плотности, твёрдости и собственной структуры - кристаллов, металлов, жидкости, газа, волокон, слоёв - формы. Фонос со временем подстраивается под окружающее вещество, чтобы идеально сочетаться с его структурой-формой, не разрушая его из-за второго закона.
 Следствием второго закона является то, что фонос может формировать различные вещественные структуры, к примеру простые блоки.
 Более сложным следствием первого и второго законов является то, что разумные фонос-сущности (духи, если угодно), такие как Хару, Этерисы и Вериты, могут "вселяться" в вещественные тела и полноценно управлять ими.
-Следствием третьего закона является то, что со временем фонос "затухает", то есть перестаёт как либо влиять на окружающее вещество, "закрепляясь" за конкретными вещественными объектами и "сливаясь" с ними, что позволяет первый закон. Это явление называется *фонос-эрозией*[^4].
+Следствием третьего закона является то, что со временем фонос "затухает", то есть перестаёт как либо влиять на окружающее вещество, "закрепляясь" за конкретными вещественными объектами и "сливаясь" с ними, что позволяет первый закон. Это явление называется *эрозией*[^4].
 # Фонос и фонос
 Помимо взаимодействия фонос-вещество существует также взаимодействие фонос-фонос.
 1. Фоносы могут перемещаться в пространстве только посредством взаимодействия с веществом, и разные фоносы не препятствуют перемещению друг друга[^6].
@@ -46,7 +45,7 @@ $$
 
 [^3]: считайте это как жанр
 
-[^4]: вдохновение для этого я увидел в явлении энтропии и теории тепловой смерти вселенной. Болезнь Хару - это фонос-эрозия, Хару привязан к Гимпануму.
+[^4]: вдохновение для этого я увидел в явлении энтропии и теории тепловой смерти вселенной. Болезнь Хару - это эрозия, Хару привязан к Гимпануму.
 
 [^5]: фонос постоянно движется, потому что гаммы, напоминаю, заставляют его притягиваться и отталкиваться от вещества. такое постоянное движение вполне можно назвать диффузией, и вследствие этой диффузии могут случайно складываться структуры
 
