Добавлена хронология, обновлен глоссарий и описание Гимпанума и Хару
хронология не дописана, скоро будет
плюс изменения по мелочи

--- a/obsidian vault/Runes&Rails/Гимпанум.md
+++ b/obsidian vault/Runes&Rails/Гимпанум.md
@@ -1,1 +1,13 @@
-Изначально здесь было тихо
+Изначально здесь было тихо.
+
+На заре формирования Вселенной Гимпанум был протопланетным диском - скоплением газа и пыли, формирующимся в звезду и планеты вокруг неё. В центре её была протозвезда - неплотный, но горячий шар газа.
+
+Когда родился Хару, Гимпанум естественный образом стал его анкером. Огромное тело Хару было соразмерно ему самому и его фантазии. Ещё не сформировавшиеся астероиды, протопланеты, облака пыли и скопления газа стали биомами целого мира - Гимпанума.
+
+# Биомы
+Сердце Бога - протозвезда, вокруг который должна была быть целая система, стала центром анкера Хару. Самое тёплое и приятное место как для самого Хару, так и для его детей Этерисов. Горячий газовый шар внутри имеет куполообразную полость, обустроенную под подобие храма, именно так обычно происходят . Когда началась болезнь Хару, хрусталлизация началась именно с центра анкера. Прямо посреди сердца вырос огромный хрусталь, который был позже превращён в Утробу
+
+Хрустальные Сады — из пыли и мелких астероидов Хару слепил бесконечные сады, где пыль кристаллизовалась в высокие, искрящиеся стебли и цветы. По иронии, Хрусталь, как фонос-кристалл, появился в этом биоме после начала болезни Хару. Ариса поселила здесь **ледяных драконов (???)**, так как им нравятся кристаллические растения. Среди этих самых растений можно найти драгоценный Хрусталь - то, из-за многие Вериты рискуют жизнью в борьбе с драконами.
+
+Луга Шёпота - Здесь газ сгустился в бескрайние поля из мягких, светящихся стеблей, похожих на стеклянные травинки, наполненные жидким светом. Каждый «колосок» при дуновении ветра (а ветер здесь — это дыхание Хару) издаёт тихий звон, как крошечный колокольчик. Здесь часто можно встретить Эллаев.
+
