--- a/obsidian vault/Runes&Rails/Глоссарий.md
+++ b/obsidian vault/Runes&Rails/Глоссарий.md
@@ -1,11 +1,12 @@
 **[[Фонос и его физические законы|Фонос]]** - вид материи, пронизывающей вселенную, и тесно взаимодействующий с веществом силами, схожими с электромагнитным и сильным ядерным взаимодействием. Обладает рядом параметров, называемых гаммой, от которых зависит конкретный характер взаимодействия частицы фоноса (цера) с веществом.
-**Фоносомика** - структура из фоноса. Сравнима с молекулярными структурами в реальном мире. Фоносомики могут быть очень большими и сложными. Примеры фоносомик - магия, душа, жизнь. Опыт, который дропается с ресурсов и мобов - самая простая фоносомика, которая является осколком более сложной фоносомики. Рождаясь и разрушаясь, фоносомика издаёт звук, мелодию или целую музыкальную композицию.
-**Анкер**, фонос-якорь - вещественный объект, к которому привязывается фоносомика. Фоносомика может породить анкер и анкер может породить фоносомику. Зачастую, никакая фоносомика не может долго существовать без анкера. Примеры анкера - живое тело для души, кусок руды с опытом, магический снаряд с заклинанием, зачарованный предмет.
+**Вещество** - обычная привычная нам материя, в мире Майнкрафта измеряемая блоками.
+**Фоносомика** - структура из фоноса. Сравнима с молекулярными структурами в реальном мире. Фоносомики могут быть очень большими и сложными. Примеры фоносомик - магия, душа, жизнь. Опыт, который дропается с ресурсов и мобов - самая простая фоносомика, которая является осколком более сложной фоносомики. *Рождаясь и разрушаясь, фоносомика издаёт звук, мелодию или целую музыкальную композицию.*
+**Анкер**, фонос-якорь - вещественный объект, к которому привязывается всякая фоносомика. Фоносомика может породить анкер и анкер может породить фоносомику. Примеры анкера - живое тело для души, кусок руды с опытом, магический снаряд с заклинанием, зачарованный предмет. Зачастую, никакая фоносомика не может долго существовать без анкера. Одними из исключений являются Этерисы и Вериты, которые имеют больше одного анкера за жизнь. В момент смены анкера они могут существовать без анкера
 **Фонос-существо** - фоносомика, спонтанно или искусственно обретшая разум. В отличии от обычного существа - то есть анкера, движимого жизнью или душой (что тоже является фоносомикой), фонос-существо может в некоторой степени манипулировать фоносом и веществом. Примеры фонос-существ - Хару, Этерисы, Вериты, жители, пиглины.
 **Эрозия** - процесс "утихания", "износа" или "старения" фоноса, когда его гамма постепенно сводится к нейтральной. Объясняется энтропией. Все фоносомики подвержены эрозии со временем, фонос-существа ускоряют свою эрозию, когда расходуют силы на манипуляции фоносом и веществом. Финалом эрозии является образование хрусталя. 
 **Хрусталь** - особый камень, который образуется в естественной природе путем концентрации фоноса с самой нейтральной и податливой для изменения гаммой. Фонос-существа могут использовать хрусталь для невероятных творений, ритуалов или замедления эрозии. [Хрусталь имеет чистейший звук](https://zvukipro.com/predmet/808-zvuki-hrustalja.html). *Премиум-валюта сервера*
 **[[Хару]]** - главный герой всего сюжета, центральная личность всего мира. Неудавшийся творец, отдавший всего себя на своё творение. Является фонос-существом, гигантской в масштабах Вселенной фоносомикой, обладающей божественными свойствами, такими как способность к созиданию других фоносомик. Ближе к концу сюжета сильно страдает от эрозии. Его анкером является Гимпанум.
 **[[Гимпанум]]** - космический объект, анкер Хару, сформировавшийся вместе с ним. Выглядит как поле астероидов в планетарной туманности, искаженное наивной фантазией ребёнка. С точки зрения астрофизики является сверхмассивным объектом, который должен был сформироваться в звезду, но благодаря фоносомике Хару существует в том виде, в котором есть. Из-за эрозии Хару на Гимпануме встречаются кристаллы хрусталя. На дальней орбите Гимпанума находится планета, включающая в себя Верхний мир, Незер и Эзер
 **Этерисы** - порождённые Хару фонос-существа, уникальные тем, что они полностью рукотворны. Их творец закладывал в каждого из них особую идею и предназначение (не всегда у него это получалось так, как хотелось бы), от чего каждый имеет свои особенные силы. Как фоносомики они не настолько огромны, как сам Хару, но при этом достаточно могущественны. Этерисы сами выбирают себе анкер при рождении и могут менять его. *Все существующие этерисы (в порядке старшинства): [[Новарион]], [[Агнар]], [[Сурги]], [[Лурги]], [[Ариса]], [[Брут]], [[Мардук]].*
-**Утроба** - уникальная в своём роде фоносомика, работающая как автономный завод Веритов. Создана Мардуком при поддержке Сурги и Лурги в самом крупном кристалле хрусталя в Гимпануме, называемом Сердцем Хару. С некоторой периодичностью порождает Веритов, даёт им тело и выпускает в Гимпанум, откуда они попадают в Верхний мир через инфраструктуру Мардука.
+**Утроба** - уникальная в своём роде фоносомика, работающая как автономный завод Веритов. Создана Мардуком при поддержке Сурги и Лурги в самом крупном кристалле хрусталя в Сердце Бога. С некоторой периодичностью порождает Веритов, даёт им тело и выпускает в Гимпанум, откуда они попадают в Верхний мир через инфраструктуру Мардука.
 **Вериты** - фонос-существа, рождённые в Утробе. Будучи продуктом массового производства, каждый Верит сам находит свою идентичность, но изначальное их предназначение - помочь обратить вспять эрозию Хару. Истинным анкером всех Веритов является Утроба, а их тела - лишь временные вместилища. *Вериты могут быть как НПС, так и игроками.*
