--- a/obsidian vault/Runes&Rails/Фонос и его физические законы.md
+++ b/obsidian vault/Runes&Rails/Фонос и его физические законы.md
@@ -2,6 +2,8 @@
 
 > В ЭТОЙ ЗАМЕТКЕ Я УПОРОЛСЯ В ФИЗИКУ
 
+> эта заметка не самая актуальная, глоссарий актуальнее. эта пометка останется здесь до того, как я не обновлю эту заметку
+
 # Общие сведения
 В нашей собственной вселенной фонос - это особый вид материи, который находится в пространстве наравне с обычной материей (блоками, *веществом*). Также я буду называть фоносом тела из этой материи.
 Свойства фоноса как материи:
@@ -37,7 +39,9 @@ $$
 1. Фоносы могут перемещаться в пространстве только посредством взаимодействия с веществом, и разные фоносы не препятствуют перемещению друг друга[^6].
 2. Более громкий фонос меняет параметры гаммы менее громкого фоноса для приближения их к параметрам своей гаммы, повышая тем самым созвучность. Это происходит тем быстрее, чем больше разница в громкости и чем ближе эти фоносы друг к другу.
 3. Фоносы достаточно высокой созвучности при сближении друг с другом могут слиться в единый фонос. В результате слияния получается однородный фонос большего размера и большей плотности. Необходимый для слияния индекс созвучности зависит от различных факторов, таких как плотность фоносов и влияние окружающего вещества[^8].
-4. Фоносы средней или низкой созвучности при сближении могут собираться в сложные структуры[^5], называемые фоносомиками. Главным признаком фоносомики является такая противоречивость гамм составляющих её фоносов, которая позволяет фоносомике как целому снизить влияние вещества на себя. Главное условие существования фоносомики - разделимость составляющих её фоносов, то есть нельзя, чтобы они слились в единое из-за третьего закона, потому что в таком случае это однородный фонос. Простейшей фоносомикой является магия, высшей фоносомикой является сознание. Фоносомика тем сложнее, чем выше её созвучность[^7]. 
+4. Фоносы средней или низкой созвучности при сближении могут собираться в сложные молекулоподобные структуры[^5], называемые фоносомиками. Главным признаком фоносомики является такая противоречивость гамм составляющих её фоносов, которая позволяет фоносомике как целому снизить влияние вещества на себя. Главное условие существования фоносомики - разделимость составляющих её фоносов, то есть нельзя, чтобы они слились в единое из-за третьего закона, потому что в таком случае это однородный фонос. Простейшей фоносомикой является магия, высшей фоносомикой является сознание. Фоносомика тем сложнее, чем выше её созвучность[^7]. 
+# Другие факты
+При формировании и разрушении фоносомики происходит что-то наподобие ядерной реакции с выделением энергии. Эта энергия принимает форму звука. Чем сложнее фоносомика, тем больше разнообразие выделяемых звуков, что может превращаться в мелодии и полноценную музыку.
 
 [^1]: аналогично, наименьшей частицей вещества является атом (не вдаёмся в то, из чего состоит атом)
 
