--- a/obsidian vault/Runes&Rails/Хару.md
+++ b/obsidian vault/Runes&Rails/Хару.md
@@ -1,1 +1,5 @@
-Многоголосый, 
+По сути, главный герой всего сюжета, центральная личность всего мира. Неудавшийся творец, отдавший всего себя на своё творение. Является фонос-существом, гигантской в масштабах Вселенной фоносомикой, обладающей божественными свойствами, такими как способность к созиданию других фоносомик. Ближе к концу сюжета сильно страдает от эрозии. Его анкером является Гимпанум, огромный протопланетный диск.
+
+Родился под песню [Here Come The Sun](https://youtu.be/KQetemT1sWc?si=YZw521sApU6lelpG), и почти с самого рождения наслаждался  музыкой Вселенной, а потом и начал делать её сам, вследствие чего родились Этерисы, мир майна и Вериты.
+
+По характеру жизнелюбивый, светлый и полный почти что наивной радости и любви к искусству. Не обладает мудростью, присущим божественным сущностям, из-за чего страдает на своём творческом пути, постоянно совершая ошибки и расстраиваясь даже от меньших из них.
