--- a/obsidian vault/Runes&Rails/Сюжет/Этерисы и Вериты.md
+++ b/obsidian vault/Runes&Rails/Сюжет/Этерисы и Вериты.md
@@ -4,6 +4,7 @@
 Начать стоит с того, что глоссарий указывает, что Вериты рождаются в Утробе, а Этерисы *рукотворны*. Хару создавал Этерисов не для того, чтобы у него были дети, друзья или чтобы населить Вселенную жизнью. Каждый раз, когда он сотворял новое детище, ему нужен был *инструмент*. И он делал себе этот инструмент, давая ему цель и чёткое предназначение. Смысл существования Этериса - стремиться к заложенной в него цели. Ничего более. Они лишь инструмент, пускай и одухотворённый, но всё же лишённый души.
 В [[Основные мысли]] я упоминал, что Этерисы не имеют в своей природе понятия предательства и угнетения чужой воли. Я хочу развить эту тему - этого в них нет не потому, что они такие все из себя святые и чистые, а потому что они *не люди*, и даже близко на них не похожи. Я считаю, что Этерисы не способны к греху - но лишь потому, что для них не существует искушения. У Этерисов можно проследить характер - но это модель поведения, личности и души в них нет. Любой, кто будет пытаться общаться с Этерисами, быстро обнаружит, что они практически болванки с имитацией эмоций.
 **Этерисы - функция**, а не личность. Можно даже сказать, что они лишены собственной воли, свободы выбора и самосознания. Если угодно, то Этерисы - нейросети, у каждого из которых есть свой "промпт", которому он следует по жизни. Здесь же проявляется ошибка Хару - он "писал" неправильные "промпты", противоречащие друг другу, и они приводили к тому, что что-то ломалось в мире. Когда появились Сурги и Лурги, они стали действовать вопреки программе Агнара. Хару задал Бруту такой "промпт", который заставил его сломать всё, что было. Этерисы никогда не были виноваты в том, что сотворили. Не их поступки приводили к проблемам. Во всём виноват Хару, потому что он применяет свои инструменты таким образом, что потом приходится исправлять. *Чтобы не говорить "промпт", я буду называть предназначение Этерисов **стремлением***.
+!!! Важно отметить - у Этерисов есть характер и его можно прописать. Из этого строится образ его поведения и действий. Но вести он себя будет как нейронка - он не развивается как личность и не выходит за рамки своего стремления. Этерисы имеют имитацию личности, поэтому характер им нужен. (это я к тому, что я просил вас прописать характера Этерисов)
 *Единственное исключение - это Новарион.* Хару дал своему первенцу стремление "повторять прекрасные звуки, звучащие из космоса". Максимально просто и глупо - но такой уж Хару. Поэтому Новарион побрёл за этими звуками из космоса и дошёл до Пустоты. Скажу честно, пока я не могу точно представить себе этот механизм, но мне хочется, чтобы Пустота пробуждала самосознание и "заражала" экзистенциализмом[^1]. Ну вот Новарион и заразился и перестал быть **функцией**, и стал *личностью*. По этой причине он всегда действовал вопреки своему стремлению и приходил в критические моменты истории, чтобы спасти всех, потому что *он свободен в своём выборе взять эту ответственность*. Ариса тоже была подвержена Пустоте, но в гораздо меньшей степени, и её стремление изначально намного более сложное, чем у Новариона, поэтому попытка пробуждения в Арисе самосознания привела к слому её "программы", её искажению, и она стала безумной Арисой, носителем проклятия Пустоты. 
 
 В то же время есть Вериты. Они совершенно другие по сравнению с Этерисами. Утроба - это не просто механизм, созданный Этерисами для исполнения последней воли Хару и его спасения. Утроба в какой-то степени фонос-существо, как и Хару, но их дети сильно отличаются. Вериты не имеют врождённого стремления, зато от рождения наделены свободой выбирать, кем им быть. *Вообще мне хочется развить несколько конспирологическую теорию о том, что Сердце Бога (не родившаяся звезда в центре Гимпанума) имеет свою душу и волю, знает всё на свете, ведает судьбу и пытается влиять на мир, рождая Веритов.*
