Добавил в все связанные заметки Стремления
было сложно, много чего править пришлось

--- a/obsidian vault/Runes&Rails/Глоссарий.md
+++ b/obsidian vault/Runes&Rails/Глоссарий.md
@@ -7,6 +7,8 @@
 **Хрусталь** - особый камень, который образуется в естественной природе путем концентрации фоноса с самой нейтральной и, соответственно, податливой для изменения гаммой. Фонос-существа могут использовать хрусталь для невероятных творений, ритуалов, усиления себя или замедления эрозии. [Хрусталь имеет чистейший звук](https://zvukipro.com/predmet/808-zvuki-hrustalja.html). *Премиум-валюта сервера*
 **[[Хару]]** - главный герой всего сюжета, центральная личность всего мира. Неудавшийся творец, отдавший всего себя на своё творение. Является фонос-существом, гигантской в масштабах Вселенной фоносомикой, обладающей божественными свойствами, такими как способность к созиданию других фоносомик. Ближе к концу сюжета сильно страдает от эрозии. Его анкером является Гимпанум.
 **[[Гимпанум]]** - космический объект, анкер Хару, сформировавшийся вместе с ним. Выглядит как поле астероидов в планетарной туманности, искаженное наивной фантазией ребёнка. С точки зрения астрофизики является протопланетным диском, сверхмассивным объектом, который должен был сформироваться в солнечную систему, но благодаря фоносомике Хару существует в том виде, в котором есть. Из-за эрозии Хару на Гимпануме встречаются кристаллы хрусталя. На дальней орбите Гимпанума находится планета, включающая в себя Верхний мир, Незер и Эзер
-**Этерисы** - порождённые Хару фонос-существа, уникальные тем, что они полностью рукотворны. Их творец закладывал в каждого из них особую идею и предназначение (не всегда у него это получалось так, как хотелось бы), от чего каждый имеет свои особенные силы. Как фоносомики они не настолько огромны, как сам Хару, но при этом достаточно могущественны. Этерисы сами выбирают себе анкер при рождении и могут менять его. *Все существующие этерисы (в порядке старшинства): [[Новарион]], [[Агнар]], [[Сурги]], [[Лурги]], [[Ариса]], [[Брут]], [[Мардук]].*
-**Утроба** - уникальная в своём роде фоносомика, работающая как автономный завод Веритов. Создана Мардуком при поддержке Сурги и Лурги в самом крупном кристалле хрусталя в Сердце Бога. С некоторой периодичностью порождает Веритов, даёт им тело и выпускает в Гимпанум, откуда они попадают в Верхний мир через инфраструктуру Мардука.
+**Этерисы** - порождённые Хару фонос-существа, уникальные тем, что они полностью *рукотворны*. Их творец закладывал в каждого из них особую идею и предназначение, которое называется стремлением (не всегда у него это получалось так, как хотелось бы), от чего каждый имеет свои особенные силы. Как фоносомики они не настолько огромны, как сам Хару, но при этом достаточно могущественны. Этерисы сами выбирают себе анкер при рождении и могут менять его. *Все существующие этерисы (в порядке старшинства): [[Новарион]], [[Агнар]], [[Сурги]], [[Лурги]], [[Ариса]], [[Брут]], [[Мардук]].*
+**Стремление** - идея, предназначение, цель, суть, которую в Этериса заложил его создатель. Проявляется в виде строгого ограничителя воли - стремление не позволяет Этерису думать о чём угодно и действовать как угодно, если это не приблизит Этериса к осуществлению стремления. Являются, по сути, ментальными оковами. Технически представляют из себя самостоятельную фоносомику, которая вкладывается в Этериса при его создании. Может быть изъята из фонос-тела (не анкера) Этериса, после чего перестанет на него действовать, то есть он станет свободным. Доныне существует два способа избавиться от стремления - позволить Пустоте его выкорчевать или умереть.
+**Утроба** - уникальная в своём роде фоносомика, работающая как автономный завод Веритов. Создана Мардуком при поддержке Сурги и Лурги в самом крупном кристалле хрусталя в Сердце Бога. С некоторой периодичностью порождает Веритов, даёт им тело и выпускает в Гимпанум, откуда они попадают в Верхний мир через инфраструктуру Мардука. Предположительно, имеет зачатки разума и может иметь своё мнение на определённые события.
 **Вериты** - фонос-существа, рождённые в Утробе. Будучи продуктом массового производства, каждый Верит сам находит свою идентичность, но изначальное их предназначение - помочь обратить вспять эрозию Хару. Истинным анкером всех Веритов является Утроба, а их тела - лишь временные вместилища. *Вериты могут быть как НПС, так и игроками.*
+**Пустота** - область пространства за пределами Вселенной и космоса, где кончается любая материя и начинается великое ничто. Пустота по разному воздействует на объекты, в неё попадающие, но все эти воздействия мало изучены. Точно известно, что она пытается освободить Этерисов от их стремлений. Предположительно, имеет зачатки разума и может иметь своё мнение на определённые события.
