--- a/obsidian vault/Runes&Rails/Домены.md
+++ b/obsidian vault/Runes&Rails/Домены.md
@@ -1,10 +1,8 @@
 Домены Этерисов - это их зоны влияния, за что они отвечают и что свойственно персонально им. Наличие чего-бы то ни было среди доменов Этериса не делает его собственником этого чего-то, но это означает, что он обладает глубокой связью с этим явлением, может в некоторой степени контролировать его.
-
 К примеру:
-- Новарион обитает в пустоте, вне времени и пространства, поэтому телепортация ему свойственна, хотя Ариса тоже может использовать благодаря магии, пускай и в более слабой форме;
+- Новарион обитает в пустоте, вне времени и пространства, поэтому телепортация ему свойственна, хотя Ариса тоже может использовать телепортацию благодаря магии, пускай и в более слабой форме;
 - Агнар создал камень из своей "плоти" и понимает его свойства как никто лучше, но любой Этерис или Верит может делать с камнем что-угодно не намного хуже Агнара;
 - Брут не придумал соперничество или упорство, но он является их воплощением, образцовым примером личности, идущей вопреки всем и всему к своей цели. Среди черт характера Брута можно выделить перфекционизм, но это не является его доменом, потому что это не главное.
-
 Иными словами, домен - это абстрактное свойство, определяющее качество, яркая ассоциация
 
 ---
