--- a/obsidian vault/Runes&Rails/ПРОЧИТАЙ МЕНЯ.md
+++ b/obsidian vault/Runes&Rails/ПРОЧИТАЙ МЕНЯ.md
@@ -1,5 +1,13 @@
 Всё, что здесь описано - информация для нас, разрабов и модеров, чисто для понимания лора. В некоторых местах может быть упомянуто, что "таким-то образом это надо подавать игрокам", иногда будут вставки, которые пойдут напрямую игрокам, но зачастую игроки не будут получать информацию в том виде, в котором она есть здесь.
 
+Порядок, в котором стоит читать заметки (что не указано не обязательно к прочтению):
+[[Глоссарий]]
+[[Основные мысли]]
+[[Хронология]]
+[[Этерисы и Вериты]]
+
+---
+OLD:
 Данное обсидиан-хранилище будет содержать следующее
 
 Глоссарий самых важных терминов для всего лора
