--- a/obsidian vault/Runes&Rails/Сюжет/Основные мысли.md
+++ b/obsidian vault/Runes&Rails/Сюжет/Основные мысли.md
@@ -17,5 +17,5 @@
 - В какой-то момент цепочка квестов и поручений разветвляется. Ветки ведут игрока знакомиться поближе с конкретными Этерисами и их учениями, с механиками модов (Create, Ars Nouveau, Applied Energistics, Alex's Caves и т.д.) и, самое главное, с многогранностью тех причин, которые привели к предсмертному состоянию Хару. В этот момент игрок постепенно будет формировать собственное мнение по поводу всех этих дел и сможет осознанно и **вовлечённо** сделать выбор, к кому присоединиться. Само собой, хронологию и историю мира тоже постепенно раскрываем.
 Подытоживая - это всё требует большой работы над персонажами. Потому я просил всех вас взять себе кого-то из Этерисов и прописать их характер, чтобы на это можно было ориентироваться. Помимо этого, нужно будет создать пару десятков НПС, которыми мы заселим мир, и которые смогут повлиять на игроков и их мнение по поводу "политической" обстановки в нашем сюжете.
 ### Ваши предпочтения и ожидания, мои товарищи
-Я знаю, что некоторые из вас говорили про механику фронтов, войны за территорию и прочего. Я, честно признаюсь, не особо увлечён этими мыслями (не возбуждает меня перспектива играть в Foxhole в майне), но я не против того, что вы проявите инициативу и поможете мне встроить это в наш сервер. Пока что я предполагаю, что чем-то подобным могут заниматься особо увлечённые Вериты-НПС: Этерисы не вступают друг с другом в открытый конфликт, потому что уже знают, что это ничем хорошим не кончится (ну или у них просто перемирие, которое они не могут нарушить, потому что в их природе нету понятия предательства, или типа того, этот момент я не продумал ещё). И игроки, почему-бы и нет, могут присоединяться к отрядам и армиям воинствующих Веритов, и сражаться, к примеру, за источники Хрусталя.
+Я знаю, что некоторые из вас говорили про механику фронтов, войны за территорию и прочего. Я, честно признаюсь, не особо увлечён этими мыслями (не возбуждает меня перспектива играть в Foxhole в майне), но я не против того, что вы проявите инициативу и поможете мне встроить это в наш сервер. Пока что я предполагаю, что чем-то подобным могут заниматься особо увлечённые Вериты-НПС: Этерисы не вступают друг с другом в открытый конфликт, потому что силы Арисы усмиряют их и потому что их стремления не подразумевают войны. И игроки, почему-бы и нет, могут присоединяться к отрядам и армиям воинствующих Веритов, и сражаться, к примеру, за источники Хрусталя.
 Были у вас ещё какие-то мысли про механики по типу удержания точек или сфер влияния, но я не могу упомнить. Буду рад вступить с вами в обсуждение всех ваших идей. Как никак, это контент для нашего сервера.
