--- a/obsidian vault/Runes&Rails/Этерисы/Агнар.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Агнар.md
@@ -1,17 +1,13 @@
 Второй Этерис, изначально Герр Захер Мазох
 
 [[Домены#Агнар]]
-
+# Стремление
+Формулировка - "Построй мир, который не будет колебаться, будь твёрдым, как он"
+Предмет - Стремление Гиганта - сильная кирка, на ПКМ превращает некаменные блоки в радиусе в камень, камень превращает с шансом в руду или в магму, магму с шансом превращает в бедрок. 
 # Черты характера
-
 =пояснение: не только сухие черты характера, но и информация по типу "чем увлечен", "чем озабочен", "что вызывает недовольство" и тд
-
 # Роль в сюжете
-
 =пояснение: для чего был создан Хару и как ведёт себя после начала его болезни
-
 # Отношение к другим
-
 =пояснение: отношение к Хару, к каждому другому Этерису и к Веритам
-
 # Прочее
