--- a/obsidian vault/Runes&Rails/Этерисы/Ариса.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Ариса.md
@@ -1,17 +1,14 @@
 Пятый Этерис, единственная девушка среди Этерисов
 
 [[Домены#Ариса]]
-
+# Стремление
+Формулировка - "Управляй своими ближними, пускай они будут спокойны и повинны, будь силой контроля"
+Предмет - Стремление Королевы - артефакт-кольцо, при ПКМ вызывает 3(?) визеров, которые ведут не атакуют хозяина. 
 # Черты характера
-
 =пояснение: не только сухие черты характера, но и информация по типу "чем увлечен", "чем озабочен", "что вызывает недовольство" и тд
-
 # Роль в сюжете
-
+Ариса была создана Хару для того, чтобы усмирить остальных Этерисов, поэтому её особенная сила может влиять на волю других. Её способность - это буквально манипулирование. Отчасти из этого идёт её магический талант, ведь она манипулирует силами природы. Если Ариса утеряет своё стремление, то она может внезапно и перехотеть усмирять своих братьев, чтобы те не рушили мир.
 =пояснение: для чего был создан Хару и как ведёт себя после начала его болезни
-
 # Отношение к другим
-
 =пояснение: отношение к Хару, к каждому другому Этерису и к Веритам
-
 # Прочее
