--- a/obsidian vault/Runes&Rails/Этерисы/Мардук.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Мардук.md
@@ -1,44 +1,27 @@
 Седьмой и последний Этерис
 
 [[Домены#Мардук]]
-
+# Стремление
+Формулировка - "..."
+Предмет - Стремление ... - ...
 # Черты характера
-
 стоик(он не невосприимчив к эмоциям, и он не холоден, но вывести его из себя сложно; Леопольд?!), тех кто ему безразличен использует как инструменты для реализации своих целей (хотя так может показаться и с теми, кто ему не безразличен, но поверьте им он «даёт» намного больше, чем «берёт»), всегда честен(от того он старается продумать диалог наперёд)
-
 Чем увлечен: порядком, механизмами, веритами, музыкой(классической).
-
 Чем озабочен: состоянием Хару, раздором среди Этерисов.
-
 Что вызывает недовольство: хаос, нарушение обещания, халатность.
-
 Пояснение: Мардук не обладает способности творить, но имеет способности по схожие с «договорами» (схож с тем, что вериты могут назвать контрактом, т.е. «ты  мне, я тебе». Если одна сторона должна что-то сделать чтобы что-то получить, то пока он не сделает свою часть, он не получит «награду». После выполнения этой части, всегда следует награда согласно «договору» так что обмануть стороны не могут друг друга. Эту силу использует через Мардука другие этерисы, взамен предоставляя Мардуку часть своих сил) и «законами» (чтобы не допустить ещё больше дисгармонии, Мардук дал сказанному от его имени слову «нельзя» силу, соразмеряемую удара Агнара по земле, тяжесть превышающее вес четырёх миров и с вездесущностью самого Звука. Однако вещей которых делать «нельзя» по мнению Мардука так много (а о тех которых он пока не знает ещё больше), что это отнимает много сил и не каждое сказанное его «нельзя» обладает теми внушительными качествами что были описаны выше, и хоть те «не внушительные нельзя» можно совершить, рассматривать это стоит как акт самоубийства). Вопреки этому он не испытывает к зависти к творцам, но интерес к их работам, конечно если они не усложняют работу Мардуку. По началу воспринимал спасение Хару и, вследствие, примирении этерисов, как цель, работу, задачу выполнение которой и есть смысл его жизни. Он и сейчас так думает, но после череды разговоров, переговоров и попыток договориться, начал понимать желания и убеждения других этерисов. Он почувствовал эмпатию к ним и к своему отцу. Тоже самое он почувствовал к веритам и их изобретениями (тут и Create («мирная» его часть) и ванилла).
-
 # Роль в сюжете
-
 помощник веритов на пути спасении Хару и примирении других этерисов.
-
 # Отношение к другим
-
 Отношение к Хару: как к кумиру
-
 Отношение к Новариону: недоволен тем что Новарион, как старший, допустил болезнь Хару, но благодарен тому, что закончил вражду(?). Его отстранённость вызывает недовольство (соизмеримую с тем, как мать ребёнка приходит домой и видит, что её чадо не помыло посуду), хотя Мардук видит в нём одного из тех, кто разделяет его мнение насчёт Хару.
-
 Отношение к Агнару: ему кажется трогательным(очаровательным,милым?), то с какой страстью подходит Агнар к своему делу, но в тоже время ему жаль что своей страстью он губит Хару
-
 Отношение к Лурги: приятный собеседник
-
 Отношение к Сурги: легко нашёл с ним общий язык
-
 Отношение к Арисе: хоть Мардук и понимает, что при создании Арисы Хару закладывал в неё определённый смысл (возможно стоит перефразировать), он испытывает так называемую веритами «головную боль», от её выходок и беспорядка что она порой вызывает. Их отношения схожи как у кота Леопольда с мышами
-
 Отношение к Бруту: если бы Брут был бы более сговорчив, то скорее всего Мардук и Брут были бы также близки как Лурги и Сурги. От того Мардуку больше жаль, что Брут является главным противником его мнения.
-
 Отношение к веритам: эмпатия к веритам, к тем, кто держит своё слово, к тем, кто стремиться к порядку, любопытство к творцам, интерес к изобретателям, недовольство к тем творит хаос.
-
 # Прочее
-
 Музыко-рефенсы:
-
 [https://youtu.be/7hm0D2dfUYU?si=HibBuV3F0jvNPTLw](https://youtu.be/7hm0D2dfUYU?si=HibBuV3F0jvNPTLw)  
 [https://youtu.be/xyFIQ3crD6o?si=BrYf-6GYeK687LKo](https://youtu.be/xyFIQ3crD6o?si=BrYf-6GYeK687LKo)
