--- a/obsidian vault/Runes&Rails/Этерисы/Новарион.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Новарион.md
@@ -1,17 +1,13 @@
 Первый Этерис
 
 [[Домены#Новарион]]
-
+# Стремление
+Формулировка - "Ищи и создавай музыку из космоса"
+Предмет - Стремление Забытого - сильный меч, который при ударе накладывает [[эффект Проклятие Изгнания]]. 
 # Черты характера
-
 =пояснение: не только сухие черты характера, но и информация по типу "чем увлечен", "чем озабочен", "что вызывает недовольство" и тд
-
 # Роль в сюжете
-
 =пояснение: для чего был создан Хару и как ведёт себя после начала его болезни
-
 # Отношение к другим
-
 =пояснение: отношение к Хару, к каждому другому Этерису и к Веритам
-
 # Прочее
