--- a/obsidian vault/Runes&Rails/Этерисы/Сурги.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Сурги.md
@@ -1,17 +1,14 @@
 Третий Этерис, близнец [[Лурги]]
 
 [[Домены#Сурги]]
-
+# Стремление
+одно на двоих с [[Лурги]]
+Формулировка - "Будь живой силой, пускай твои творения меняют мир вокруг, постоянно, циклично, чтобы он жил"
+Предмет - Стремление Волхвов - броня-нагрудник(?), которое делает положительные баффы бесконечными, а негативные баффы заканчивает моментально. 
 # Черты характера
-
 =пояснение: не только сухие черты характера, но и информация по типу "чем увлечен", "чем озабочен", "что вызывает недовольство" и тд
-
 # Роль в сюжете
-
 =пояснение: для чего был создан Хару и как ведёт себя после начала его болезни
-
 # Отношение к другим
-
 =пояснение: отношение к Хару, к каждому другому Этерису и к Веритам
-
 # Прочее
