--- a/obsidian vault/Runes&Rails/Сюжет/Этерисы и Вериты.md
+++ b/obsidian vault/Runes&Rails/Сюжет/Этерисы и Вериты.md
@@ -1,11 +1,11 @@
-Этерисы и Вериты являются фоносомиками, и в изначальной задумке их основное отличие было в масштабе их могущества и в их происхождении. 
-Но я углубился в проработку их отличий вместе с проработкой в общем законом, по которым существует наш мир (в частности фонос), и мне пришла на ум очень интересная идея, которая воодушевляет меня и которая, как по мне, должна придать больше смысла всему сюжету. Но эта идея также противоречива, и я надеюсь, что вы её поймёте и она вам понравится.
+Этерисы и Вериты являются фоносомиками, и в изначальной задумке их основное отличие было в масштабе их могущества и в их происхождении. Но я углубился в проработку их отличий вместе с проработкой в общем законом, по которым существует наш мир (в частности фонос).
 
-Начать стоит с того, что глоссарий указывает, что Вериты рождаются в Утробе, а Этерисы *рукотворны*. Хару создавал Этерисов не для того, чтобы у него были дети, друзья или чтобы населить Вселенную жизнью. Каждый раз, когда он сотворял новое детище, ему нужен был *инструмент*. И он делал себе этот инструмент, давая ему цель и чёткое предназначение. Смысл существования Этериса - стремиться к заложенной в него цели. Ничего более. Они лишь инструмент, пускай и одухотворённый, но всё же лишённый души.
-В [[Основные мысли]] я упоминал, что Этерисы не имеют в своей природе понятия предательства и угнетения чужой воли. Я хочу развить эту тему - этого в них нет не потому, что они такие все из себя святые и чистые, а потому что они *не люди*, и даже близко на них не похожи. Я считаю, что Этерисы не способны к греху - но лишь потому, что для них не существует искушения. У Этерисов можно проследить характер - но это модель поведения, личности и души в них нет. Любой, кто будет пытаться общаться с Этерисами, быстро обнаружит, что они практически болванки с имитацией эмоций.
-**Этерисы - функция**, а не личность. Можно даже сказать, что они лишены собственной воли, свободы выбора и самосознания. Если угодно, то Этерисы - нейросети, у каждого из которых есть свой "промпт", которому он следует по жизни. Здесь же проявляется ошибка Хару - он "писал" неправильные "промпты", противоречащие друг другу, и они приводили к тому, что что-то ломалось в мире. Когда появились Сурги и Лурги, они стали действовать вопреки программе Агнара. Хару задал Бруту такой "промпт", который заставил его сломать всё, что было. Этерисы никогда не были виноваты в том, что сотворили. Не их поступки приводили к проблемам. Во всём виноват Хару, потому что он применяет свои инструменты таким образом, что потом приходится исправлять. *Чтобы не говорить "промпт", я буду называть предназначение Этерисов **стремлением***.
-!!! Важно отметить - у Этерисов есть характер и его можно прописать. Из этого строится образ его поведения и действий. Но вести он себя будет как нейронка - он не развивается как личность и не выходит за рамки своего стремления. Этерисы имеют имитацию личности, поэтому характер им нужен. (это я к тому, что я просил вас прописать характера Этерисов)
-*Единственное исключение - это Новарион.* Хару дал своему первенцу стремление "повторять прекрасные звуки, звучащие из космоса". Максимально просто и глупо - но такой уж Хару. Поэтому Новарион побрёл за этими звуками из космоса и дошёл до Пустоты. Скажу честно, пока я не могу точно представить себе этот механизм, но мне хочется, чтобы Пустота пробуждала самосознание и "заражала" экзистенциализмом[^1]. Ну вот Новарион и заразился и перестал быть **функцией**, и стал *личностью*. По этой причине он всегда действовал вопреки своему стремлению и приходил в критические моменты истории, чтобы спасти всех, потому что *он свободен в своём выборе взять эту ответственность*. Ариса тоже была подвержена Пустоте, но в гораздо меньшей степени, и её стремление изначально намного более сложное, чем у Новариона, поэтому попытка пробуждения в Арисе самосознания привела к слому её "программы", её искажению, и она стала безумной Арисой, носителем проклятия Пустоты. 
+Начать стоит с того, что глоссарий указывает, что Вериты рождаются в Утробе, а Этерисы *рукотворны*. Хару создавал Этерисов не для того, чтобы у него были дети, друзья или чтобы населить Вселенную жизнью. Каждый раз, когда он сотворял новое детище, ему нужен был *инструмент* для своего процесса искусства. И он делал себе этот инструмент, давая ему цель и чёткое предназначение - так называемое **стремление**. Оно проявляется в виде фразы или наставления, если угодно - "промпта". Смысл существования Этериса - выполнять стремление. Ничего более. Они лишь инструмент для своего создателя.
+%% В [[Основные мысли]] я упоминал, что Этерисы не имеют в своей природе понятия предательства и угнетения чужой воли. Я хочу развить эту тему - этого в них нет не потому, что они такие все из себя святые и чистые, а потому что они *не люди*, и даже близко на них не похожи. Я считаю, что Этерисы не способны к греху - но лишь потому, что для них не существует искушения. У Этерисов есть личность и характер, но любой, кто будет пытаться общаться с Этерисами, быстро обнаружит, что они практически болванки с имитацией эмоций. %%
+**Этерисы - функция**, а не личность, но это лишь из-за стремления, которое действует как ограничитель. Можно даже сказать, что они лишены собственной воли, свободы выбора и самосознания. Ошибка Хару в том, что он *необдуманно* давал своим детям противоречащие друг другу стремления, и они приводили к тому, что что-то ломалось в мире. Когда появились Сурги и Лурги, они стали действовать вопреки стремлению Агнара. Хару дал Бруту такое стремление, которое заставило его сломать всё, что было. Этерисы никогда не были виноваты в том, что сотворили. Не их поступки приводили к проблемам. Во всём виноват Хару, потому что он применяет свои инструменты таким образом, что потом приходится исправлять. 
+> Саша интересно отметил, что Этерисы "как мегапринципиальные големы с единой целью"
+
+*Единственное исключение - это Новарион.* Хару дал своему первенцу стремление "Ищи и создавай музыку из космоса". Максимально просто и глупо - но такой уж Хару. Поэтому Новарион побрёл за этой музыкой из космоса и дошёл до Пустоты. Мне нравится говорить, что Пустота заражает Этерисов экзистенциализмом[^1], но по-простому она просто освобождает их от стремления. Ну вот Новарион и освободился, перестал быть **функцией** и стал *личностью*. По этой причине он всегда действовал не смотря на своё стремление и приходил в критические моменты истории, чтобы спасти всех, потому что *он свободен в своём выборе взять эту ответственность*. Ариса тоже была подвержена Пустоте, но она во-первых, лишь частично коснулась Пустоты, а во-вторых не смогла осознать, кем она является без своего стремления, поэтому у неё "свистанула фляга" и она стала безумной Арисой, носителем проклятия Пустоты. 
 
 В то же время есть Вериты. Они совершенно другие по сравнению с Этерисами. Утроба - это не просто механизм, созданный Этерисами для исполнения последней воли Хару и его спасения. Утроба в какой-то степени фонос-существо, как и Хару, но их дети сильно отличаются. Вериты не имеют врождённого стремления, зато от рождения наделены свободой выбирать, кем им быть. *Вообще мне хочется развить несколько конспирологическую теорию о том, что Сердце Бога (не родившаяся звезда в центре Гимпанума) имеет свою душу и волю, знает всё на свете, ведает судьбу и пытается влиять на мир, рождая Веритов.*
 Но свобода, как говорят, отравляет. Вериты намного ближе к человечеству в плане греховности, борьбы за власть, не совершенности морали своих поступков. 
@@ -14,7 +14,5 @@
 
 К вопросу о взаимодействии Этерисов и игроков. Игроки могут говорить с Этерисами, если их найдут. Где их искать и как они выглядят - пока что не знаю, но мне кажется логичным призывать их каким-нибудь предметом или ритуалом, либо находить в каком-нибудь месте. Пока что это звучит очень размыто, но я поясню когда-нибудь позже, либо предлагайте свои идеи. Просто я пока что не думал всерьёз о том, в каком теле (анкере) находиться Этерису, если они могут их менять, и где ему жить, не может же он просто находиться где-то - каждый Этерис имеет свою роль в мире (Сурги и Лурги - солнце и луна, Агнар руды создаёт). А может и может. Надо подумать.
 Мне нравится мысль, что особо прозорливые НПС-Вериты будут создавать культы близких к ним по духу Этерисов, причём последние могут никак к этому не относиться, не руководить действиями своих последователей, хотя при этом главы культов будут говорить "Вот Агнар нас отправил на войну вон с тем кланом". Будет забавно.
-
-~~Пишу это уже ночью, мысли бегают, да и за прошедшие дни, что я был вдохновлён, я некоторые мысли потерял, поэтому буду дополнять~~. Пока что всё на сегодня
 
 [^1]: Экзистенциализм — это философское течение XX века, фокусирующееся на уникальности человеческого бытия, свободе выбора и ответственности за свою судьбу в бессмысленном мире, где «существование предшествует сущности», то есть человек сначала существует, а затем сам определяет себя через свои поступки
