--- a/obsidian vault/Runes&Rails/Глоссарий.md
+++ b/obsidian vault/Runes&Rails/Глоссарий.md
@@ -4,7 +4,7 @@
 **Анкер**, фонос-якорь - вещественный объект, к которому привязывается всякая фоносомика. Фоносомика может породить анкер и анкер может породить фоносомику. Примеры анкера - живое тело с душой, кусок руды с опытом, магический снаряд с заклинанием, зачарованный предмет. Зачастую, никакая фоносомика не может долго существовать без анкера. Одними из исключений являются Этерисы и Вериты, которые имеют больше одного анкера за жизнь. В момент смены анкера они могут существовать без анкера
 **Фонос-существо** - фоносомика, спонтанно или искусственно обретшая разум. В отличии от обычного существа - то есть анкера, движимого жизнью или душой (что тоже является фоносомикой), фонос-существо может в некоторой степени манипулировать фоносом и веществом. Примеры фонос-существ - Хару, Этерисы, Вериты, жители, пиглины.
 **Эрозия** - процесс "утихания", "износа", "выцветания" или "старения" фоноса, когда его гамма постепенно сводится к нейтральной. Объясняется энтропией. Все фоносомики подвержены эрозии со временем, фонос-существа ускоряют свою эрозию, когда расходуют силы на манипуляции фоносом и веществом. Финалом эрозии является образование хрусталя. 
-**Хрусталь** - особый камень, который образуется в естественной природе путем концентрации фоноса с самой нейтральной и, соответственно, податливой для изменения гаммой. Фонос-существа могут использовать хрусталь для невероятных творений, ритуалов, усиления себя или замедления эрозии. [Хрусталь имеет чистейший звук](https://zvukipro.com/predmet/808-zvuki-hrustalja.html). *Премиум-валюта сервера*
+**Хрусталь** - особый камень, который образуется в естественной природе путем концентрации фоноса с самой нейтральной и, соответственно, податливой для изменения гаммой. Фонос-существа могут использовать хрусталь для невероятных творений, ритуалов, усиления себя или замедления эрозии. [Хрусталь имеет чистейший звук](https://zvukipro.com/predmet/808-zvuki-hrustalja.html). *Премиум-валюта сервера, опыт тоже является Хрусталём*
 **[[Хару]]** - главный герой всего сюжета, центральная личность всего мира. Неудавшийся творец, отдавший всего себя на своё творение. Является фонос-существом, гигантской в масштабах Вселенной фоносомикой, обладающей божественными свойствами, такими как способность к созиданию других фоносомик. Ближе к концу сюжета сильно страдает от эрозии. Его анкером является Гимпанум.
 **[[Гимпанум]]** - космический объект, анкер Хару, сформировавшийся вместе с ним. Выглядит как поле астероидов в планетарной туманности, искаженное наивной фантазией ребёнка. С точки зрения астрофизики является протопланетным диском, сверхмассивным объектом, который должен был сформироваться в солнечную систему, но благодаря фоносомике Хару существует в том виде, в котором есть. Из-за эрозии Хару на Гимпануме встречаются кристаллы хрусталя. На дальней орбите Гимпанума находится планета, включающая в себя Верхний мир, Незер и Эзер
 **Этерисы** - порождённые Хару фонос-существа, уникальные тем, что они полностью *рукотворны*. Их творец закладывал в каждого из них особую идею и предназначение, которое называется стремлением (не всегда у него это получалось так, как хотелось бы), от чего каждый имеет свои особенные силы. Как фоносомики они не настолько огромны, как сам Хару, но при этом достаточно могущественны. Этерисы сами выбирают себе анкер при рождении и могут менять его. *Все существующие этерисы (в порядке старшинства): [[Новарион]], [[Агнар]], [[Сурги]], [[Лурги]], [[Ариса]], [[Брут]], [[Мардук]].*
